# sapiens2

./: README.md  pyproject.toml
docs/: MATTING.md  NORMAL.md  POINTMAP.md  POSE.md  SEG.md
sapiens/dense/src/datasets/matting/: matting_base_dataset.py  matting_gss_dataset.py
sapiens/dense/src/datasets/transforms/: matting_transforms.py
sapiens/dense/src/evaluators/: matting_evaluator.py
sapiens/dense/src/models/core/: matting_estimator.py
sapiens/dense/src/models/heads/: matting_head.py
sapiens/dense/src/models/losses/: matting_loss.py
sapiens/dense/src/visualizers/: matting_visualizer.py
sapiens/dense/tools/vis/: vis_matting.py
sapiens/pose/scripts/demo/: keypoints308.sh
test_data/: image_list.txt  image_paths_1.txt  image_paths_2.txt  image_paths_3.txt  image_paths_4.txt  image_paths_5.txt  image_paths_6.txt  image_paths_7.txt
